# wasm-practice-rust

./: README.md
example/: index.js
mdn-tutorial/: Cargo.toml  README.md
mdn-tutorial/example/: index.html  package-lock.json  package.json  webpack.config.js
