[package]
name = "wasm-practice-rust"
version = "0.1.0"
authors = ["teinen <teinen.github@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/teinen/wasm-practice-rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
